# banco_central_ts

./: .buildinfo  .gitignore  README.md  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/modules/: api.doctree  license.doctree
.github/workflows/: mypy.yml  pages.yml
_modules/: index.html
_modules/banco_central_ts/: get_time_series.html
_sources/modules/: api.rst.txt
banco_central_ts/: __init__.py  get_time_series.py
docs/: conf.py  index.rst
modules/: api.html  license.html
tests/: test_examples.py
